--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "bootstrap": "4.6.0",
     "classnames": "^2.3.1",
     "immer": "^9.0.3",
+    "moment": "^2.29.1",
     "node-sass": "5.0.0",
+    "prop-types": "^15.7.2",
     "qs": "^6.10.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
@@ -19,6 +21,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-timetable-events": "^1.0.2",
     "react-virtualized": "^9.22.3",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
