--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-datepicker": "^4.1.1",
     "react-daum-postcode": "^2.0.6",
     "react-dom": "^17.0.2",
+    "react-image-gallery": "^1.1.1",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
