--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "bootstrap": "4.6.0",
     "classnames": "^2.3.1",
+    "date-fns": "^2.22.1",
     "immer": "^9.0.3",
     "moment": "^2.29.1",
     "node-sass": "5.0.0",
@@ -22,6 +23,7 @@
     "react-datepicker": "^4.1.1",
     "react-daum-postcode": "^2.0.6",
     "react-dom": "^17.0.2",
+    "react-lodash": "^0.1.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
