--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "immer": "^9.0.3",
     "moment": "^2.29.1",
     "node-sass": "5.0.0",
+    "paho-mqtt": "^1.1.0",
     "prop-types": "^15.7.2",
     "qs": "^6.10.1",
     "react": "^17.0.2",
