--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-timetable-events": "^1.0.2",
+    "react-toasts": "^3.0.6",
     "react-virtualized": "^9.22.3",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
